<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.magus.enviroment.ui.CustomActionBar
        android:layout_width="fill_parent"
        app:middle_text="工作"
        android:layout_height="wrap_content"></com.magus.enviroment.ui.CustomActionBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewpager_height"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/unchecked"
                android:layout_width="0dp"
                android:layout_height="@dimen/viewpager_height"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/work_unchecked"
                android:textSize="@dimen/work_viewpager_text_size" />

            <View
                android:background="@color/work_viewpager_view"
                android:layout_width="1dp"
                android:layout_height="fill_parent" />

            <TextView
                android:id="@+id/handle"
                android:layout_width="0dp"
                android:layout_height="@dimen/viewpager_height"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/work_handle"
                android:textSize="@dimen/work_viewpager_text_size" />

            <View
                android:background="@color/work_viewpager_view"
                android:layout_width="1dp"
                android:layout_height="fill_parent" />

            <TextView
                android:id="@+id/is_checked"
                android:layout_width="0dp"
                android:layout_height="@dimen/viewpager_height"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/work_checked"
                android:textSize="@dimen/work_viewpager_text_size" />
        </LinearLayout>


        <ImageView

            android:id="@+id/indicator"
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:background="@color/custom_blue" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/nestedViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>